// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container Component UI Render Test should render with ColumnView children component 1`] = `
<div
  className="container parent"
>
  <ColumnView
    key="column_0"
    views={
      Array [
        Object {
          "name": "rendering",
          "visible": true,
        },
        Object {
          "name": "ide",
          "visible": true,
        },
      ]
    }
  />
  <Splitter
    key="splitter_column_1"
    onChange={[Function]}
    type="vertical"
  />
  <ColumnView
    key="column_1"
    views={
      Array [
        Object {
          "name": "nodal",
          "visible": true,
        },
      ]
    }
  />
</div>
`;

exports[`Container Component UI Render Test should render with RowView children component 1`] = `
<div
  className="container"
>
  <RowView
    key="row_0"
    view={
      Object {
        "name": "rendering",
        "visible": true,
      }
    }
  />
  <Splitter
    key="splitter_row_1"
    onChange={[Function]}
    type="horizontal"
  />
  <RowView
    key="row_1"
    view={
      Object {
        "name": "ide",
        "visible": true,
      }
    }
  />
</div>
`;
